--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -20,7 +20,8 @@ jobs:
 
     - name: Build and Deploy
       run: |
-        mkdir -p build && cp -R team\ assignment/* build
+        mkdir -p build && cp -R * build
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
